# DiscordBot-Top2000

./: .gitignore  2k_api.py  Cargo.toml  Dockerfile  Pipfile  README.md  api.py  bot.py  docker-compose.yml
src/: 2019.json  2020.json  api.rs  discord.rs  error.rs  main.rs  voice.rs
