[package]
name = "discord_bot_top2000"
version = "0.1.0"
authors = ["Robbin Baauw <robbin.baauw@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.0-alpha.2", features = ["blocking"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serenity = {version = "0.7", features = ["cache", "framework", "standard_framework", "voice", "http", "rustls_backend"] }
