[package]
name = "discord_bot_top2000"
version = "0.1.0"
authors = ["Robbin Baauw <robbin.baauw@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serenity = { version = "0.9", features = [
  "cache",
  "framework",
  "standard_framework",
  "voice",
  "http",
  "rustls_backend",
] }
dotenv = "0.15.0"
reqwest = { version = "0.10", features = ["blocking"] }
chrono = "0.4"
async-trait = "0.1.42"
